💄 Fix splash height on mobile

--- a/styles/mixins/_splash-height.scss
+++ b/styles/mixins/_splash-height.scss
@@ -1,6 +1,6 @@
 @mixin splash-height() {
   @media (max-width: $desktop-breakpoint) {
-    height: 50rem;
+    height: 60rem;
   }
   height: 60rem;
 }
